# jotcrack

./: .gitignore  Cargo.toml  README.md  bench.sh
docs/: architecture.md  markov-chain.md
src/: args.rs  batch.rs  commands.rs  jwt.rs  main.rs  markov.rs  parser.rs  producer.rs  runner.rs  stats.rs  test_support.rs
src/commands/: hs256crack.rs  hs256wordlist.rs  mod.rs
src/commands/autocrack/: args.rs  command.rs  mod.rs
src/commands/common/: args.rs  batch.rs  hs512_wordlist.metal  mod.rs  parser.rs  producer.rs  stats.rs  test_support.rs
src/commands/hs256wordlist/: args.rs  batch.rs  command.rs  gpu.rs  hs256_wordlist.metal  jwt.rs  mod.rs  parser.rs  producer.rs  stats.rs  test_support.rs
src/commands/hs384wordlist/: args.rs  command.rs  gpu.rs  jwt.rs  mod.rs
src/commands/hs512wordlist/: args.rs  command.rs  gpu.rs  jwt.rs  mod.rs
src/common/: mod.rs  parser.rs
src/common/gpu/: backend.rs  cuda.rs  metal.rs  mod.rs
src/gpu/: backend.rs  metal.rs  mod.rs
src/gpu/cuda/: aeskw_wordlist.cu  hs256_wordlist.cu  hs512_wordlist.cu  mod.rs
src/gpu/metal/: aeskw_wordlist.metal  hs256_wordlist.metal  hs512_wordlist.metal  mod.rs
src/kernels/: hs256_brute_force.metal  hs256_wordlist.metal
