[package]
name = "jotcrack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
metal = "0.33.0"
objc = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
memchr = "2"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
