[package]
name = "jotcrack"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
memchr = "2"
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
objc = "0.2.4"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19", features = ["std", "driver", "nvrtc", "cuda-version-from-build-system"] }

[dev-dependencies]
hmac = "0.12"
sha2 = "0.10"
aes-kw = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
